# session-conv-bot

./: .gitignore  LICENSE  Procfile  README.md  main.py  pyproject.toml  requirements.txt
modules/: callback.py  converter.py  pyrogram.py  pyrosession.py  pysession.py  server.py  session.py  setup.py  start.py  telesession.py  telethon.py
